added(examples): interface segregation & baseAudit